--- a/html/main.html
+++ b/html/main.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <title>RoomLOG</title>
+  <link rel="shortcut icon" href="../image/layout/favicon.png">
+  <link rel="stylesheet" href="../css/layout/layout.css">
+  <link rel="stylesheet" href="../css/main/main.css">
   <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="../js/main.js"></script>
+  <script defer src="../js/main/main.js"></script>
 </head>
 <body>
   <!-- 상단 공통 헤더 영역 -->
   <header id="HEADER-CONTAINER">
     <!-- 로고 및 로그인 링크 -->
     <div id="DIV-HEADER-TOP">
-      <div id="DIV-LEFT-LOGO">
+      <div id="DIV-LEFT-LOGO" onclick="location.href='';">
         <img src="../image/layout/logo.png" id="IMG-LOGO" alt="LOGO">
       </div>
       <div id="DIV-RIGHT-LOGIN">
@@ -22,7 +23,7 @@
           <a href="">메세지함</a>
         </div>
         <div class="div-header-top-link">
-          <a href="">로그인</a>
+          <a href="../html/login/login.html">로그인</a>
         </div>
       </div>
     </div>
@@ -31,7 +32,7 @@
     <!-- 메뉴바 -->
     <div id="DIV-HEADER-BOTTOM">
       <ul id="UL-HEDAER-MENU">
-        <li id="LI-HOME-LINK" class="li-menu-select"><a href="">홈</a></li>
+        <li id="LI-HOME-LINK"><a href="">홈</a></li>
         <li id="LI-COMMUNITY-LINK"><a href="">커뮤니티</a></li>
         <li id="LI-NOTICE-LINK"><a href="">공지사항</a></li>
         <li id="LI-FEEDBACK-LINK"><a href="">건의사항</a></li>
