--- a/html/login/join-required.html
+++ b/html/login/join-required.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RoomLOG</title>
   <link rel="shortcut icon" href="../../image/layout/favicon.png">
-  <link rel="stylesheet" href="../../css/layout/layout.css">
+  <link rel="stylesheet" href="../../css/layout/main-layout.css">
+  <link rel="stylesheet" href="../../css/layout/list-layout.css">
   <link rel="stylesheet" href="../../css/login/login-layout.css">
   <link rel="stylesheet" href="../../css/login/join-required.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
