--- a/html/login/login.html
+++ b/html/login/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RoomLOG</title>
   <link rel="shortcut icon" href="../../image/layout/favicon.png">
-  <link rel="stylesheet" href="../../css/layout/layout.css">
+  <link rel="stylesheet" href="../../css/layout/main-layout.css">
   <link rel="stylesheet" href="../../css/login/login-layout.css">
   <link rel="stylesheet" href="../../css/login/login.css">
 </head>
