EDIT : 20250624 커뮤니티 상세페이지 댓글 JS 처리까지 완료

--- a/html/community/community_view.html
+++ b/html/community/community_view.html
@@ -200,7 +200,7 @@
             </div>
             <div class="div-comment-date">30분 전</div>
           </div>
-          <div class="div-comment-content-wrap">
+          <div class="div-comment-content-wrap parent-comment-wrap">
             <div class="div-re-comment-btn-wrap">
               <div class="div-comment-content">
                 이런 글 보면 괜히 나도 글 쓰고 싶어져요. 하루하루 지나가는 순간들이 더 특별하게 느껴지네요.
@@ -229,9 +229,11 @@
             </div>
             <div class="div-comment-date">30분 전</div>
           </div>
-          <div class="div-comment-content-wrap">
-            <div class="div-comment-content">
-              맞아요. 표현 너무 예뻐요…
+          <div class="div-comment-content-wrap child-comment-wrap">
+            <div class="div-re-comment-btn-wrap">
+              <div class="div-comment-content">
+                맞아요. 표현 너무 예뻐요…
+              </div>
             </div>
             <div class="div-comment-btn-wrap">
               <div class="div-comment-btn div-menu-line"><span class="comment-update-btn">수정</span></div>
@@ -253,7 +255,7 @@
             </div>
             <div class="div-comment-date">30분 전</div>
           </div>
-          <div class="div-comment-content-wrap">
+          <div class="div-comment-content-wrap parent-comment-wrap">
             <div class="div-re-comment-btn-wrap">
               <div class="div-comment-content">
                 사진도 글도 모두 예쁘네요. 감성적인 분위기 덕분에 하루의 끝에서 힐링하고 갑니다.<br>
