EDIT : 20250624 세부 디테일 조정

--- a/html/login/join-optional.html
+++ b/html/login/join-optional.html
@@ -16,19 +16,7 @@
   <!-- 상단 공통 헤더 영역 -->
   <header id="HEADER-CONTAINER">
     <!-- 로고 및 로그인 링크 -->
-    <div id="DIV-HEADER-TOP">
-      <div id="DIV-LEFT-LOGO" onclick="location.href='';">
-        <img src="../../image/layout/logo.png" id="IMG-LOGO" alt="LOGO">
-      </div>
-      <div id="DIV-RIGHT-LOGIN">
-        <div class="div-header-top-link div-menu-line">
-          <a href="">메세지함</a>
-        </div>
-        <div class="div-header-top-link">
-          <a href="../html/login/login.html">로그인</a>
-        </div>
-      </div>
-    </div>
+    <div id="DIV-HEADER-TOP"></div>
     <!--  -->
 
   </header>
