--- a/html/community/community.html
+++ b/html/community/community.html
@@ -22,7 +22,7 @@
       </div>
       <div id="DIV-RIGHT-LOGIN">
         <div class="div-header-top-link div-menu-line">
-          <a href="">메세지함</a>
+          <a href="javascript:void(0);" id="GO-MESSAGE-PAGE">메세지함</a>
         </div>
         <div class="div-header-top-link">
           <a href="../../html/login/login.html">로그인</a>
@@ -210,6 +210,9 @@
           </div>
         </div>
 
+        <div id="DIV-WRITE-WRAP">
+          <div class="button-style div-write-btn">글 남기기</div>
+        </div>
         
         <!-- 페이지네이션 -->
         <div id="DIV-PAGENATION-WRAP">
