--- a/html/community/community_view.html
+++ b/html/community/community_view.html
@@ -22,7 +22,7 @@
       </div>
       <div id="DIV-RIGHT-LOGIN">
         <div class="div-header-top-link div-menu-line">
-          <a href="">메세지함</a>
+          <a href="javascript:void(0);" id="GO-MESSAGE-PAGE">메세지함</a>
         </div>
         <div class="div-header-top-link">
           <a href="../../html/login/login.html">로그인</a>
@@ -73,7 +73,7 @@
                 <span onclick="location.href=''">수정</span>
               </div>
               <div class="div-post-btn">
-                <span onclick="location.href=''">삭제</span>
+                <span id="POST-DELETE-BTN">삭제</span>
               </div>
             </div>
           </div>
@@ -155,12 +155,12 @@
     <!-- 목록 + 스크랩 버튼 영역 -->
     <section class="section-btn-wrap">
       <button class="button-style list-button" onclick="history.back()">목록으로</button>
-      <button class="button-style blue-line-button" onclick="goPostScrap(this, 0)">
+      <!-- <button class="button-style blue-line-button" onclick="goPostScrap(this, 0)">
         <img src="../../image/layout/scrap_ok.png">스크랩
-      </button>
-      <!-- <button class="button-style basic-button" onclick="noPostScrap(this)">
-        <img src="../../image/community/scrap_white.png">스크랩
       </button> -->
+      <button class="button-style basic-button" onclick="noPostScrap(this)">
+        <img src="../../image/community/scrap_white.png">스크랩
+      </button>
     </section>
     <!--  -->
 
@@ -211,7 +211,7 @@
             </div>
             <div class="div-comment-btn-wrap">
               <div class="div-comment-btn div-menu-line"><span class="comment-update-btn">수정</span></div>
-              <div class="div-comment-btn"><span>삭제</span></div>
+              <div class="div-comment-btn"><span class="comment-delete-btn">삭제</span></div>
             </div>
           </div>
         </div>
@@ -237,7 +237,7 @@
             </div>
             <div class="div-comment-btn-wrap">
               <div class="div-comment-btn div-menu-line"><span class="comment-update-btn">수정</span></div>
-              <div class="div-comment-btn"><span>삭제</span></div>
+              <div class="div-comment-btn"><span class="comment-delete-btn">삭제</span></div>
             </div>
           </div>
         </div>
@@ -267,7 +267,7 @@
             </div>
             <div class="div-comment-btn-wrap">
               <div class="div-comment-btn div-menu-line"><span class="comment-update-btn">수정</span></div>
-              <div class="div-comment-btn"><span>삭제</span></div>
+              <div class="div-comment-btn"><span class="comment-delete-btn">삭제</span></div>
             </div>
           </div>
         </div>
