--- a/html/main.html
+++ b/html/main.html
@@ -22,7 +22,7 @@
       </div>
       <div id="DIV-RIGHT-LOGIN">
         <div class="div-header-top-link div-menu-line">
-          <a href="">메세지함</a>
+          <a href="javascript:void(0);" id="GO-MESSAGE-PAGE">메세지함</a>
         </div>
         <div class="div-header-top-link">
           <a href="../html/login/login.html">로그인</a>
