EDIT : 20250625 댓글 수정 또는 답글 등록 한가지만 가능하도록 설정

--- a/html/community/community_view.html
+++ b/html/community/community_view.html
@@ -257,10 +257,7 @@
           </div>
           <div class="div-comment-content-wrap parent-comment-wrap">
             <div class="div-re-comment-btn-wrap">
-              <div class="div-comment-content">
-                사진도 글도 모두 예쁘네요. 감성적인 분위기 덕분에 하루의 끝에서 힐링하고 갑니다.<br>
-                괜히 괜찮은 하루였다고 느껴지게 만드는 힘이 있어요.
-              </div>
+              <div class="div-comment-content">사진도 글도 모두 예쁘네요. 감성적인 분위기 덕분에 하루의 끝에서 힐링하고 갑니다.<br>괜히 괜찮은 하루였다고 느껴지게 만드는 힘이 있어요.</div>
               <div class="div-re-comment-btn">
                 <img src="../../image/community/re_comment_btn.png">답글
               </div>
