EDIT : 20250626 게시글 작성 페이지 - 해시태그 작업 중

--- a/html/community/community-write.html
+++ b/html/community/community-write.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RoomLOG</title>
+  <!-- 해시태그 CDN 스크립트 코드 -->
+  <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.polyfills.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/@yaireo/tagify/dist/tagify.css" rel="stylesheet" type="text/css" />
+  
   <link rel="shortcut icon" href="../../image/layout/favicon.png">
   <link rel="stylesheet" href="../../css/layout/main-layout.css">
+  <link rel="stylesheet" href="../../css/layout/write-layout.css">
   <link rel="stylesheet" href="../../css/community/community-write.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script defer src="../../js/community/community-write.js"></script>
   <script defer src="../../js/basic/basic.js"></script>
+
 </head>
 <body>
   <!-- 상단 공통 헤더 영역 -->
@@ -60,26 +67,39 @@
           <div class="div-one-column-wrap">
             <div class="div-column-name">제목</div>
             <div class="div-column-input-wrap">
-              <input type="text" name="title" class="">
+              <input type="text" name="title" id="title" placeholder="나만의 공간에 어울리는 한 줄 작성해보세요.">
             </div>
           </div>
           <div class="div-one-column-wrap">
             <div class="div-column-name">내용</div>
-            <div class="div-column-input-wrap">
-              <textarea name="content" id=""></textarea>
+            <div class="div-column-content-wrap">
+              <textarea name="content" id="TEXTAREA-CONTENT" placeholder="인테리어 이야기, 공간 팁, 소소한 일상도 좋아요."></textarea>
               <div class="div-text-count-wrap"><span id="count-text">0</span>/300</div>
             </div>
           </div>
           <div class="div-one-column-wrap">
             <div class="div-column-name">해시태그</div>
             <div class="div-column-input-wrap">
-              <input type="text" name="hashtag" class="">
+              <!-- <input type="text" name="hashtag" id="text" placeholder="관련 키워드를 태그로 남겨보세요." autocomplete="off"> -->
+              <input name='users-list-tags' class='users-list' value='abatisse2@nih.gov, Justinian Hattersley'>
+              
             </div>
+            <div id="DIV-HASHTAG-WRAP"></div>
           </div>
-          <div class="div-one-column-wrap">
-            <div class="div-column-name">첨부 이미지</div>
-            <div class="div-column-input-wrap">
-              <input type="file" name="image" class="" multiple>
+          <div class="div-one-column-wrap" id="DIV-FLEX-NONE">
+            <div id="DIV-COLUMN-FLEX-WRAP">
+              <div class="div-column-name">첨부 이미지</div>
+              <div class="div-column-input-wrap" id="DIV-BTN-IMAGE-WRAP">
+                <label for="input-image" id="LABEL-IMAGE-BTN">
+                  <img src="../../image/layout/image_regist_btn.png" alt="이미지 등록" class="img-regist-btn">
+                  <input type="file" name="" id="input-image" class="input-image-btn" multiple accept="image/*"/>
+                </label>
+              </div>
+            </div>
+            <!-- 등록한 이미지 미리보기 -->
+            <div id="DIV-THUMBNAIL-MSG-WRAP">
+              <div id="DIV-PREVIEW-IMAGE-WRAP"></div>
+              <div class="div-check-msg">최대 5장까지 첨부 가능합니다.</div>
             </div>
           </div>
         </div>
@@ -87,8 +107,8 @@
         
         <!-- 목록 / 등록 버튼 영역 -->
         <div id="DIV-WRITE-WRAP">
-          <div class="button-style list-button">저장</div>
-          <div class="button-style basic-button">저장</div>
+          <div class="button-style list-button"><span>←</span> 목록으로</div>
+          <div class="button-style basic-button">글 등록하기</div>
         </div>
         <!--  -->
       </form>
