--- a/html/login/login.html
+++ b/html/login/login.html
@@ -31,7 +31,7 @@
       </section>
 
       <section id="DIV-LOGIN-BTN-WRAP">
-        <div id="KAKAO-LOGIN" class="btn-social-wrap">
+        <div id="KAKAO-LOGIN" class="btn-social-wrap" onclick="location.href='join-required.html'">
           <img src="../../image/login/login_kakao.png" alt="kakao">
           <span class="span-login-text">카카오로 계속하기</span>
         </div>
