EDIT : 20250627 UI 깨짐 수정 및 시간 형식 변경 완료

--- a/html/login/join-optional.html
+++ b/html/login/join-optional.html
@@ -37,7 +37,7 @@
         <form action="" method="">
 
           <div id="DIV-PROFILE-SETTINGS-WRAP">
-            <div id="DIV-PROFILE-IMG">
+            <div id="DIV-PROFILE-IMG" class="none-img">
               <label for="profile-image">
                 <div id="DIV-PROFILE-IMG-WRAP">
                   <img src="../../image/login/profile_img_add.png" id="IMG-PROFILE" alt="프로필사진 추가">
