EDIT : 20250627 마이페이지 작업 중

--- a/html/community/community.html
+++ b/html/community/community.html
@@ -77,7 +77,7 @@
         </form>
         <!--  -->
         
-        <div id="DIV-LIST-WRAP">
+        <div class="div-list-wrap">
           <!-- 글 개수 + 정렬 카테고리 -->
           <div id="DIV-INFO-WRAP">
             <div id="DIV-POST-COUNT">총 83개</div>
