EDIT : 20250628 마이페이지 글 목록 작업 완료

--- a/html/community/community_view.html
+++ b/html/community/community_view.html
@@ -155,12 +155,12 @@
     <!-- 목록 + 스크랩 버튼 영역 -->
     <section class="section-btn-wrap">
       <button class="button-style list-button" onclick="history.back()">목록으로</button>
-      <!-- <button class="button-style blue-line-button" onclick="goPostScrap(this, 0)">
+      <button class="button-style blue-line-button" onclick="goPostScrap(this, 0)">
         <img src="../../image/layout/scrap_ok.png">스크랩
-      </button> -->
-      <button class="button-style basic-button" onclick="noPostScrap(this)">
-        <img src="../../image/community/scrap_white.png">스크랩
       </button>
+      <!-- <button class="button-style basic-button" onclick="noPostScrap(this)">
+        <img src="../../image/community/scrap_white.png">스크랩
+      </button> -->
     </section>
     <!--  -->
 
