--- a/html/main.html
+++ b/html/main.html
@@ -84,7 +84,7 @@
               <div class="div-count-numer">117</div>
             </div>
             <div class="div-count-wrap">
-              <img src="../image/main/board_count.png" class="img-board-count" alt="board">
+              <img src="../image/layout/board_count.png" class="img-board-count" alt="board">
               <div class="div-count-name">게시글</div>
               <div class="div-count-numer">17</div>
             </div>
@@ -105,7 +105,7 @@
               <div class="div-count-numer">117</div>
             </div>
             <div class="div-count-wrap">
-              <img src="../image/main/board_count.png" class="img-board-count" alt="board">
+              <img src="../image/layout/board_count.png" class="img-board-count" alt="board">
               <div class="div-count-name">게시글</div>
               <div class="div-count-numer">17</div>
             </div>
@@ -123,7 +123,7 @@
               <div class="div-count-numer">117</div>
             </div>
             <div class="div-count-wrap">
-              <img src="../image/main/board_count.png" class="img-board-count" alt="board">
+              <img src="../image/layout/board_count.png" class="img-board-count" alt="board">
               <div class="div-count-name">게시글</div>
               <div class="div-count-numer">17</div>
             </div>
@@ -141,7 +141,7 @@
               <div class="div-count-numer">117</div>
             </div>
             <div class="div-count-wrap">
-              <img src="../image/main/board_count.png" class="img-board-count" alt="board">
+              <img src="../image/layout/board_count.png" class="img-board-count" alt="board">
               <div class="div-count-name">게시글</div>
               <div class="div-count-numer">17</div>
             </div>
